force-app/main/default/objects/Benefits__c/fields/Badge_Label__c.field-meta.xml
<CustomField>
    <fullName>Badge_Label__c</fullName>
    <label>Badge Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>