force-app/main/default/objects/Benefits__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <description>팬에게 제공된 혜택의 종류를 기록</description>
    <inlineHelpText>팬에게 제공된 혜택의 종류를 기록</inlineHelpText>
    <label>Benefit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Early Access</fullName>
            </value>
            <value>
                <fullName>Membership Day Invite</fullName>
            </value>
            <value>
                <fullName>Badge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>