force-app/main/default/objects/Benefits__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>혜택이 팬에게 발급된 날짜를 기록</description>
    <inlineHelpText>혜택이 팬에게 발급된 날짜를 기록</inlineHelpText>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>