force-app/main/default/objects/Benefits__c/fields/Min_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Purchase_Amount__c</fullName>
    <label>Min Purchase Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>