force-app/main/default/objects/Benefits__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>해당 혜택을 발급하게 만든 추천 액션을 연결(추천 없이 직접 발급한 경우 비워둘 수 있음)</description>
    <inlineHelpText>해당 혜택을 발급하게 만든 추천 액션을 연결(추천 없이 직접 발급한 경우 비워둘 수 있음)</inlineHelpText>
    <label>Recommendations</label>
    <referenceTo>Recommendations__c</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>