force-app/main/default/objects/Benefits__c/fields/Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Used_Date__c</fullName>
    <description>팬이 혜택을 실제로 사용한 날짜를 기록</description>
    <inlineHelpText>팬이 혜택을 실제로 사용한 날짜를 기록</inlineHelpText>
    <label>Used Date</label>
    <type>Date</type>
</CustomField>