force-app/main/default/objects/Benefits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fan__c</columns>
    <columns>Benefit_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Issued_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>